# Terraform_Replica_Agnet

./: README.md  deployment_report.md  pyproject.toml  report.md  terraform_infrastructure.tf  terraform_validation_report.md
src/replica/: crew.py  main.py
src/replica/config/: agents.yaml  tasks.yaml
